Filling programmatically the content of the APOD

--- a/index.html
+++ b/index.html
@@ -31,22 +31,7 @@
             </span>
         </div>
         <!-- Images Container -->
-        <div class="images-container">
-            <div class="card">
-                <a href="" title="View Full Image" target="_blank">
-                    <img src="https://apod.nasa.gov/apod/image/2205/PyramidPlanets_Fatehi_8356.jpg" alt="NASA Picture of the Day" class="card-img-top">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">Title Of Image</h5>
-                    <p class="clickable">Add to Favorites</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quibusdam ullam ab eos? Temporibus illo in cum itaque libero velit quod facilis fugit, nihil unde, iure quibusdam blanditiis laborum aut? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae nesciunt laborum non aliquam. Sint, repellendus accusantium odio, dolorem molestiae deleniti explicabo cupiditate alias at tenetur autem, sed non. Fugiat, perspiciatis!</p>
-                    <small class="text-muted">
-                        <strong>12-12-2020</strong>
-                        <span>Copyright Info</span>
-                    </small>
-                </div>
-            </div>
-        </div>
+        <div class="images-container"></div>
     </div>
     <!-- Save Confirmation -->
     <div class="save-confirmed" hidden>
